operation  order   layout  utils

--- a/main_system/templates/operation/admin_review_list.html
+++ b/main_system/templates/operation/admin_review_list.html
@@ -3,7 +3,7 @@
 <div class="container mt-4">
     <h2>Manage Reviews</h2>
 
-    <!-- 简洁的筛选表单 -->
+    <!-- Simple filter form -->
     <div class="row mb-3">
         <div class="col-md-12">
             <form method="get" class="row g-3 mb-3">
@@ -88,7 +88,7 @@
         </tbody>
     </table>
 
-    <!-- 分页 -->
+    <!-- Pagination -->
     <div class="d-flex justify-content-center">
         {% if reviews.has_other_pages %}
         <nav>
