--- a/main_system/templates/operation/promo_code_list.html
+++ b/main_system/templates/operation/promo_code_list.html
@@ -43,23 +43,23 @@
         </tbody>
     </table>
 
-    <!-- 分页导航 -->
+    <!-- Pagination Navigation -->
     {% if promo_codes.has_other_pages %}
     <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
             {% if promo_codes.has_previous %}
             <li class="page-item">
-                <a class="page-link" href="?page=1">&laquo; 首页</a>
+                <a class="page-link" href="?page=1">&laquo; First</a>
             </li>
             <li class="page-item">
-                <a class="page-link" href="?page={{ promo_codes.previous_page_number }}">上一页</a>
+                <a class="page-link" href="?page={{ promo_codes.previous_page_number }}">Previous</a>
             </li>
             {% else %}
             <li class="page-item disabled">
-                <span class="page-link">&laquo; 首页</span>
+                <span class="page-link">&laquo; First</span>
             </li>
             <li class="page-item disabled">
-                <span class="page-link">上一页</span>
+                <span class="page-link">Previous</span>
             </li>
             {% endif %}
 
@@ -77,17 +77,17 @@
 
             {% if promo_codes.has_next %}
             <li class="page-item">
-                <a class="page-link" href="?page={{ promo_codes.next_page_number }}">下一页</a>
+                <a class="page-link" href="?page={{ promo_codes.next_page_number }}">Next</a>
             </li>
             <li class="page-item">
-                <a class="page-link" href="?page={{ promo_codes.paginator.num_pages }}">末页 &raquo;</a>
+                <a class="page-link" href="?page={{ promo_codes.paginator.num_pages }}">Last &raquo;</a>
             </li>
             {% else %}
             <li class="page-item disabled">
-                <span class="page-link">下一页</span>
+                <span class="page-link">Next</span>
             </li>
             <li class="page-item disabled">
-                <span class="page-link">末页 &raquo;</span>
+                <span class="page-link">Last &raquo;</span>
             </li>
             {% endif %}
         </ul>
